# senmon

./: .gitignore  Cargo.toml  SenmonReport.docx
Reports/PhaseI/: .~lock.SenmonReport.docx#  SenmonReport.docx
Reports/PhaseII/: Abstract.docx  Acknowledgement.docx  Bonafide.docx  Bonafide.odt  Index.docx  ListOfFigures.docx  Report.docx  TitlePage.docx  combine.sh
assets/css/: form.css  index.css  land.css  login_page.css
assets/html/: home.html  land.html
assets/templates/: auth.html  download_file.html  login-footer.html  login.html  navbar.html  upload_file.html
src/: auth.rs  db.rs  handlers.rs  main.rs  session.rs  types.rs
templates/: index.html
