[package]
name = "senmon"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
askama = { version = "0.12.1", features = ["serde", "with-axum"] }
axum = { version = "0.7.7", features = ["multipart"] }
hex = "0.4.3"
rand = "0.8.5"
ring = "0.17.8"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
